--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "react": "18.2.0",
-    "react-native": "0.72.0"
+    "react-native": "0.72.0",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-pager-view": "^6.3.3",
+    "react-native-permissions": "^4.1.5",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-track-player": "^4.1.1",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
